--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
         NEO4J_USER: neo4j
         NEO4J_PASSWORD: password
       run: |
-        python test_advanced_graphrag.py
+        pytest
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -103,9 +103,9 @@ jobs:
     - name: Run Bandit security checks
       run: |
         pip install bandit
-        bandit -r . -f json -o bandit-report.json || true
+        bandit -r . -f sarif -o bandit-report.sarif || true
     
     - name: Upload security scan results
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: bandit-report.json 
+        sarif_file: bandit-report.sarif 
