--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Bandit
         run: pip install bandit
-      - name: Run Bandit
-        run: bandit -r . -f sarif -o bandit-report.sarif || true
+      - name: Print Bandit version
+        run: bandit --version
+      - name: Run Bandit and capture output
+        run: |
+          bandit -r . -f sarif -o bandit-report.sarif > bandit-output.log 2>&1 || true
+          echo "Bandit run completed. Listing files:"
+          ls -l
+      - name: Check for SARIF file and print Bandit output if missing
+        run: |
+          if [ ! -f bandit-report.sarif ]; then
+            echo "SARIF report not found! Printing Bandit output:";
+            cat bandit-output.log;
+            exit 1;
+          fi
       - name: Upload SARIF report
         uses: github/codeql-action/upload-sarif@v3
         with:
